--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
   "homepage": "https://github.com/emukupa/graphql-goodreads#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.0.2",
     "helmet": "^3.15.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "node-fetch": "^2.3.0",
+    "node-xml2js-promise": "^1.1.1",
+    "superagent": "^4.0.0"
   }
 }
